Fixing Alignment (Hopefully for the last time) Color=White
padding-left: +10px
color:white

--- a/main.css
+++ b/main.css
@@ -44,6 +44,6 @@ h2 {
 }
 
 .main {
-	padding-left: 50px;
+	padding-left: 60px;
 	min-width: 75%;
 }
